# src/user/user.controller.ts
@@ -1,12 +1,18 @@
 import {
     Body,
     Controller,
+    Delete,
     Get,
     Param,
     ParseIntPipe,
-    Patch
+    Patch,
+    Post
 } from '@nestjs/common';
 
+import { CurrentUser } from '@auth/decorators';
+import { JwtPayload } from '@auth/interfaces';
+
+import { AddressRequestDto } from './dto/address-request.dto';
 import { ProfileRequestDto } from './dto/profile-request.dto';
 import { UserService } from './user.service';
 
@@ -14,16 +20,54 @@ import { UserService } from './user.service';
 export class UserController {
     constructor(private readonly userService: UserService) {}
 
-    @Get(':id')
-    async createDtoById(@Param('id', ParseIntPipe) id: number) {
-        return await this.userService.createDtoById(id);
+    @Get()
+    async createDtoById(@CurrentUser() user: JwtPayload) {
+        return await this.userService.createDtoById(user.id);
     }
 
-    @Patch(':id')
+    @Patch()
     async updateProfile(
-        @Param('id', ParseIntPipe) id: number,
+        @CurrentUser() user: JwtPayload,
         @Body() dto: ProfileRequestDto
     ) {
-        return await this.userService.updateProfile(id, dto);
+        return await this.userService.updateProfile(user.id, dto);
+    }
+
+    @Get('address')
+    async getAddresses(@CurrentUser() user: JwtPayload) {
+        return await this.userService.getAddresses(user.id);
+    }
+
+    @Post('address')
+    async createAddress(
+        @CurrentUser() user: JwtPayload,
+        @Body() dto: AddressRequestDto
+    ) {
+        return await this.userService.createAddress(user.id, dto);
+    }
+
+    @Patch('address/:id')
+    async updateAddress(
+        @Param('id', ParseIntPipe) id: number,
+        @CurrentUser() user: JwtPayload,
+        @Body() dto: AddressRequestDto
+    ) {
+        return await this.userService.updateAddress(id, user.id, dto);
+    }
+
+    @Delete('address/:id')
+    async deleteAddress(
+        @Param('id', ParseIntPipe) id: number,
+        @CurrentUser() user: JwtPayload
+    ) {
+        return await this.userService.deleteAddress(id, user.id);
+    }
+
+    @Patch('address/:id/toggle-primary')
+    async togglePrimaryAddress(
+        @Param('id', ParseIntPipe) id: number,
+        @CurrentUser() user: JwtPayload
+    ) {
+        return await this.userService.togglePrimaryAddress(id, user.id);
     }
 }
